CommandHandler aufgeräumt.